--- a/package.json
+++ b/package.json
@@ -27,12 +27,11 @@
   },
   "homepage": "https://github.com/adatapoint/AsistenciasFront#readme",
   "devDependencies": {
-    "react-materialize": "2.6.0",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
-    "babel-preset-stage-2": "6.24.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
     "clean-webpack-plugin": "0.1.17",
     "css-loader": "0.28.7",
     "extract-text-webpack-plugin": "3.0.2",
@@ -41,5 +40,10 @@
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.3"
+  },
+  "dependencies": {
+    "lodash": "4.17.11",
+    "react": "16.7.0",
+    "react-dom": "16.7.0"
   }
 }
