--- a/package.json
+++ b/package.json
@@ -43,8 +43,9 @@
   },
   "dependencies": {
     "lodash": "4.17.11",
+    "prop-types": "15.6.2",
     "react": "16.7.0",
     "react-dom": "16.7.0",
-    "semantic-ui-react": "^0.84.0"
+    "semantic-ui-react": "0.84.0"
   }
 }
