--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "css-loader": "0.28.7",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "redux-devtools": "^3.5.0",
     "style-loader": "0.19.0",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
@@ -46,6 +47,11 @@
     "prop-types": "15.6.2",
     "react": "16.7.0",
     "react-dom": "16.7.0",
+    "react-redux": "^6.0.0",
+    "react-redux-toastr": "^7.4.6",
+    "react-router-dom": "^4.3.1",
+    "react-tabs": "^3.0.0",
+    "redux": "^4.0.1",
     "semantic-ui-react": "0.84.0"
   }
 }
